# parallel-assignment-2

./: .gitignore  CMakeLists.txt  main.c  parallel-assignment-2.cpp  parallel-assignment-2.sln  parallel-assignment-2.vcxproj  parallel-assignment-2.vcxproj.filters
common/: fileLoadUtils.c  fileLoadUtils.h
solutions/a/: mainA.c
solutions/b/: mainB.c
solutions/c/: mainC.c
